--- a/06_Bootstrap/Praktikum/BS-createProduct/style.css
+++ b/06_Bootstrap/Praktikum/BS-createProduct/style.css
@@ -1,6 +1,20 @@
+body {
+    margin: 0;
+}
+
 .container {
     width: 100%;
     display: flex;
     flex-direction: column;
-    align-items: center;
 }
+
+input[type="file"]::file-selector-button {
+    background-color: #0d6efd;
+    border: 1px solid #80bdf1;
+    color: white;
+}
+
+.form-control:hover {
+    color: #0d6efd; /* Mengubah warna teks menjadi biru ketika dihover */
+}
+
