--- a/24_Basic Model OpenAI dan Prompt Engginer di React/Praktikum/My_OpenAI/src/Pages/ChatAI/ChatAI.css
+++ b/24_Basic Model OpenAI dan Prompt Engginer di React/Praktikum/My_OpenAI/src/Pages/ChatAI/ChatAI.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   width: 100%;
   max-width: 500px;
-  margin: 0 auto;
+  margin: 32px auto;
   padding: 20px;
   border: 1px solid #ccc;
   border-radius: 6px;
@@ -12,33 +12,12 @@
 
 .chat-result {
   height: 300px;
+  width: 100%;
   overflow-y: auto;
   border: 1px solid #ccc;
   border-radius: 5px;
   padding: 10px;
   background-color: #f8f8f8;
-}
-
-.chat-bubble {
-  background-color: #007bff;
-  color: #fff;
-  border-radius: 10px;
-  padding: 10px;
-  margin: 10px 0;
-  max-width: 70%;
-  word-wrap: break-word;
-  align-self: flex-end;
-}
-
-.chat-bubble-other {
-  background-color: #f8f8f8;
-  color: #000;
-  border-radius: 10px;
-  padding: 10px;
-  margin: 10px 0;
-  max-width: 70%;
-  word-wrap: break-word;
-  align-self: flex-start;
 }
 
 .input-container {
@@ -53,6 +32,7 @@
   border: 1px solid #070000;
   border-radius: 5px;
   outline: none;
+  margin: 0 10px 0 0;
 }
 
 .submit-btn {
